--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
 <body>
 <a class="skip" href="#content">Skip to content</a>
 
-<!-- Topbar -->
-<header class="topbar">
-    <div class="mobile-nav" hidden>
-        <a href="#projects">Projects</a>
-        <a href="#expertise">Expertise</a>
-        <a href="#experience">Experience</a>
-        <a href="#contact">Contact</a>
-    </div>
-</header>
-
 <main id="content">
     <!-- HERO -->
     <section class="hero">
@@ -35,9 +25,7 @@
                 <h1>Architecture-driven Unity leadership for high-performance mobile games.</h1>
 
                 <p class="lead">
-                    17 years in game development, 8 years leading Unity teams across iOS/Android/WebGL.
-                    Focused on scalable systems, performance optimization (FPS, memory, ANR/crash-free rate),
-                    and mentoring high-performing teams.
+                    Results-driven Unity Team Leader / Senior Game Developer with 17 years in game development and 8+ years leading Unity teams across mobile platforms (iOS/Android/WebGl). Proven expertise in architecting scalable Unity frameworks, performance optimization (FPS, memory, ANR/crash-free rate), and mentoring high-performing engineering teams. Strong system-level thinking, hands-on leadership, and a passion for building high-quality, stable, and engaging mobile games from prototype to live operations.
                 </p>
             </div>
 
