- update video url

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>Architecture-driven Unity leadership for high-performance mobile games.</h1>
 
                 <p class="lead">
-                    Results-driven Unity Team Leader / Senior Game Developer with 17 years in game development and 8+ years leading Unity teams across mobile platforms (iOS/Android/WebGl). Proven expertise in architecting scalable Unity frameworks, performance optimization (FPS, memory, ANR/crash-free rate), and mentoring high-performing engineering teams. Strong system-level thinking, hands-on leadership, and a passion for building high-quality, stable, and engaging mobile games from prototype to live operations.
+                    Results-driven Unity Team Leader / Senior Game Developer with 17 years in game development and 8 years leading Unity teams across mobile platforms (iOS/Android/WebGl). Proven expertise in architecting scalable Unity frameworks, performance optimization (FPS, memory, ANR/crash-free rate), and mentoring high-performing engineering teams. Strong system-level thinking, hands-on leadership, and a passion for building high-quality, stable, and engaging mobile games from prototype to live operations.
                 </p>
             </div>
 
@@ -160,11 +160,11 @@
                         <div class="pbadge">Supervisor Programmer</div>
 
                         <a class="pthumb"
-                           href="https://www.youtube.com/shorts/ZbQaceRv614"
+                           href="https://youtube.com/shorts/9kfsmsUwq10?si=RdWcFUJLEhtpUS-j"
                            target="_blank"
                            rel="noopener">
                             <img
-                                    src="https://img.youtube.com/vi/ZbQaceRv614/hqdefault.jpg"
+                                    src="https://img.youtube.com/vi/9kfsmsUwq10/hqdefault.jpg"
                                     alt="Thieves Game gameplay video" />
                             <span class="play-icon" aria-hidden="true"></span>
                         </a>
