--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@
     <section class="hero">
         <div class="container hero__grid">
             <div class="hero__left">
-                <h1>Architecture-driven Unity leadership for high-performance mobile games.</h1>
-
-                <p class="lead">
-                    Results-driven Unity Team Leader / Senior Game Developer with 17 years in game development and 8 years leading Unity teams across mobile platforms (iOS/Android/WebGl). Proven expertise in architecting scalable Unity frameworks, performance optimization (FPS, memory, ANR/crash-free rate), and mentoring high-performing engineering teams. Strong system-level thinking, hands-on leadership, and a passion for building high-quality, stable, and engaging mobile games from prototype to live operations.
-                </p>
-            </div>
-
-            <div class="hero__right">
                 <div class="card card--profile">
                     <img class="avatar" src="assets/img/avatar.jpg" alt="Nguyen Quoc Cuong" />
                     <div class="card__body">
@@ -49,6 +41,12 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="hero__right">
+                <h2>Architecture driven Unity leadership for high performance mobile games and Playables.</h2>
+                <p class="lead">
+                    Results-driven Unity Team Leader / Senior Game Developer with 17 years in game development and 8 years leading Unity teams across mobile platforms (iOS/Android/WebGl). Proven expertise in architecting scalable Unity frameworks, performance optimization (FPS, memory, ANR/crash-free rate), and mentoring high-performing engineering teams. Strong system-level thinking, hands-on leadership, and a passion for building high-quality, stable, and engaging mobile games from prototype to live operations.
+                </p>
             </div>
         </div>
     </section>
