- update video url

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                         <div class="pbadge">Supervisor Programmer</div>
 
                         <a class="pthumb"
-                           href="https://youtube.com/shorts/9kfsmsUwq10?si=RdWcFUJLEhtpUS-j"
+                           href="https://youtube.com/shorts/zIG4OWdzBs8?si=Vc7tsAg-Chm8XiqA"
                            target="_blank"
                            rel="noopener">
                             <img
-                                    src="https://img.youtube.com/vi/9kfsmsUwq10/hqdefault.jpg"
+                                    src="https://img.youtube.com/vi/zIG4OWdzBs8/hqdefault.jpg"
                                     alt="Thieves Game gameplay video" />
                             <span class="play-icon" aria-hidden="true"></span>
                         </a>
@@ -482,7 +482,7 @@
                     <div>
                         <div class="label">LinkedIn</div>
                         <a href="https://www.linkedin.com/in/quoccuonggamedev/" target="_blank" rel="noopener">
-                            https://www.linkedin.com/in/quoccuonggamedev/
+                            quoccuonggamedev
                         </a>
                     </div>
                 </div>
